my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EFMTARGT/EFMTARGT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:8:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:10:23: error EBTYPE: wrong type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:10:23:   got:      bool
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:10:23:   expected: integer type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:12:23: error EFMTARGT: wrong type for argument 1 of format string ('true')
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:12:23:   expected pointer, got 'bool'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:14:24: error EBTYPE: wrong type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:14:24:   got:      pointer to const char
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EFMTARGT.dml:14:24:   expected: integer type
